# inmo-algo

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  template.rs
src/: fetcher.rs  lib.rs  main.rs
src/cli/: app.rs  lc.rs  mod.rs
src/common/: draw.rs  editor.rs  languages.rs  mod.rs  table.rs
src/config/: mod.rs
src/layout/: mod.rs  table.rs
src/leetcode/: fetcher.rs  mod.rs  problem.rs  query.rs  storage.rs  table.rs  template.rs
src/solutions/: mod.rs  s1335.rs  s1616.rs
src/util/: build_template.rs  mod.rs
templates/: template.rs
