[package]
name = "inmo"
version = "0.0.1"
authors = ["tizee <33030965+tizee@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
regex="1.5.4"
clap = { version = "3.1.14", features = ["derive"] }
anyhow = { version = "1.0.57", features = ["backtrace"] }
lazy_static = "1.4.0"
dirs-next = "2.0.0"
toml = "0.5.9"
serde_derive = "1.0.137"
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
reqwest = { version = "0.11.10", features = ["json"] }

